<resources>
    <!--
        Naming rules
        activity_UIElement_shortValue
    -->
    <string name="app_name">Playlist Maker</string>
    <string name="main_button_search">Поиск</string>
    <string name="main_button_media">Медиатека</string>
    <string name="main_button_settings">Настройки</string>
    <string name="settings_button_theme">Темная тема</string>
    <string name="settings_button_share">Поделиться приложением</string>
    <string name="settings_button_support">Написать в поддержку</string>
    <string name="settings_button_agreement">Пользовательское соглашение</string>
    <string name="search_edittext_search_hint">Поиск</string>
    <string name="url_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="url_share" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email" translatable="false">cdarius21@yandex.ru</string>
    <string name="time_of_track" translatable="false"> · %s</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="search_no_connection">Проблемы со связью\n\n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update_button">Обновить</string>
    <string name="search_history_hint">Вы искали</string>
    <string name="search_history_clear_button">Очистить историю</string>
    <string name="player_default_play_time" translatable="false">00:30</string>
    <string name="player_duration">Длительность</string>
    <string name="player_collection_name">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre_name">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="create_toolbar_title">Новый плейлист</string>
    <string name="create_accepted_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_accepted_dialog_msg">Все несохраненные данные будут потеряны</string>
    <string name="create_accepted_dialog_pos_btn">Завершить</string>
    <string name="create_accepted_dialog_neg_btn">Отмена</string>
    <string name="create_playlist_created_msg">Плейлист %s создан</string>
    <plurals name="playlist_item_size">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
    </plurals>
    <plurals name="playlist_duration_minute">
        <item quantity="zero">минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
    </plurals>
    <string name="button_back_description">Назад</string>
    <string name="button_clear_description">Очистить</string>
    <string name="image_cover_track_description">Обложка трека</string>
    <string name="ic_forward">Стрелка вперед</string>
    <string name="player_add_to_favorite">Добавить в избранное</string>
    <string name="player_play">Включить</string>
    <string name="player_add_to_playlist">Добавить в плейлист</string>
    <string name="favorites_media_empty">Ваша медиатека пуста</string>
    <string name="playlist_not_created">Вы не создали\n ни одного плейлиста</string>
    <string name="btn_create_playlist">Новый плейлист</string>
    <string name="media_tab_favorites">Избранные треки</string>
    <string name="media_tab_playlists">Плейлисты</string>
    <string name="create_hint_description">Описание</string>
    <string name="create_btn_create">Создать</string>
    <string name="create_hint_name">Название*</string>
    <string name="player_lbl_add_to_playlist">Добавить в плейлист</string>
    <string name="player_msg_track_exist_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="player_msg_track_added">Добавлено в плейлист %s</string>
    <string name="playlist_detail_info" translatable="false">%s · %s</string>
    <string name="playlist_detail_btn_share_description">Поделиться плейлистом</string>
    <string name="playlist_detail_btn_more_description">Показать дополнительные опции</string>
    <string name="playlist_detail_dlg_btn_delelte">Удалить</string>
    <string name="playlist_detail_dlg_btn_cancel">Отмена</string>
    <string name="playlist_detail_dlg_title">Удалить трек</string>
    <string name="playlist_detail_dlg_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="share_playlist_template" translatable="false">%d.%s - %s(%s)</string>
    <string name="playlist_detail_btn_share">Поделиться</string>
    <string name="playlist_detail_btn_edit">Редактировать информацию</string>
    <string name="playlist_detail_btn_delete">Удалить плейлист</string>
    <string name="playlist_detail_message_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_detail_dlg_delete_playlist_title">Удалить плейлист</string>
    <string name="playlist_detail_dlg_delete_playlist_message">Хотите удалить плейлист «%s»?</string>
    <string name="playlist_detail_dlg_delete_playlist_pos_btn">Да</string>
    <string name="playlist_detail_dlg_delete_playlist_cancel_btn">Нет</string>
    <string name="create_update_playlist_toolbar_title">Редактировать</string>
    <string name="create_btn_update">Сохранить</string>
</resources>