<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/screenBackgroundColor"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/AppBar"
                app:title="@string/main_button_settings" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTheme"
            style="@style/PlaylistMakerTextButton"
            android:layout_marginTop="@dimen/margin_from_toolbar"
            android:paddingHorizontal="@dimen/contentPaddingS"
            android:text="@string/settings_button_theme"
            tools:checked="true" />

        <Button
            android:id="@+id/button_sharing"
            style="@style/PlaylistMakerTextButton"
            android:text="@string/settings_button_share"
            app:icon="@drawable/ic_share" />

        <Button
            android:id="@+id/button_support"
            style="@style/PlaylistMakerTextButton"
            android:text="@string/settings_button_support"
            app:icon="@drawable/ic_support" />

        <Button
            android:id="@+id/button_agreement"
            style="@style/PlaylistMakerTextButton"
            android:text="@string/settings_button_agreement"
            app:icon="@drawable/ic_arrow_forward" />
    </LinearLayout>
</ScrollView>