<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/screenBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_playlist"
            style="@style/PlaylistMakerButtonS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_from_toolbar"
            android:text="@string/btn_create_playlist" />

        <ImageView
            android:id="@+id/img_not_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/search_not_found"
            android:src="@drawable/ic_not_found" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_not_created"
            style="@style/PlaylistMakerTextMediumXL"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/contentPaddingS"
            android:text="@string/playlist_not_created"
            android:textColor="?attr/mediaNotFoundTextColor" />
    </LinearLayout>
</ScrollView>