<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/content_padding_top">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_back"
            android:foreground="?attr/selectableItemBackground"
            android:contentDescription="@string/settings_button_back_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:gravity="top"
            android:text="@string/main_button_settings"
            android:textColor="@color/text_big_color_light"
            android:textSize="@dimen/text_head_size" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="16dp"
        android:text="@string/settings_button_theme"
        android:textColor="@color/text_medium_color_light"
        android:textSize="16sp"
        app:thumbTint="@color/settings_icon_color_light"
        app:trackTint="@color/switch_track_color_light" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings_button_share"
        android:textColor="@color/text_medium_color_light"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:typeface="sans"
        app:icon="@drawable/ic_share"
        app:iconGravity="end"
        app:iconTint="@color/settings_icon_color_light" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings_button_support"
        android:textColor="@color/text_medium_color_light"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:typeface="sans"
        app:icon="@drawable/ic_support"
        app:iconGravity="end"
        app:iconTint="@color/settings_icon_color_light" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings_button_agreement"
        android:textColor="@color/text_medium_color_light"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:typeface="sans"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="end"
        app:iconTint="@color/settings_icon_color_light" />
</LinearLayout>