<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/AppBar"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/main_button_search" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/content_padding_horizontal"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:drawableStart="@drawable/search_icon_16"
                android:drawablePadding="8dp"
                android:drawableTint="?attr/colorOnSurface"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search_edittext_search_hint"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:minHeight="36dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/yp_black"
                android:textColorHint="?attr/colorOnSurface"
                android:textFontWeight="400"
                android:textSize="@dimen/text_regular_size"
                app:icon="@drawable/ic_search" />

            <ImageButton
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="?attr/colorSurface"
                android:contentDescription="@string/button_clear_description"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                app:tint="?attr/colorOnSurface"
                tools:visibility="visible" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>