<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create.presentation.ui.CreateFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/AppBar"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/create_toolbar_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/cover"
                android:layout_width="@dimen/playerCoverSize"
                android:layout_height="@dimen/playerCoverSize"
                android:layout_gravity="center"
                android:layout_marginHorizontal="24dp"
                app:shapeAppearance="@style/RoundedCoverM"
                android:layout_marginTop="26dp"
                android:background="@drawable/shape_add_cover"
                android:importantForAccessibility="no"
                android:scaleType="center"
                android:src="@drawable/ic_add_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_layout"
                style="@style/PlaylistMakerEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="@dimen/contentPaddingS"
                android:layout_marginTop="32dp"
                android:hint="@string/create_hint_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_album_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/PlaylistMakerEditTextInputAppearance"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_layout"
                style="@style/PlaylistMakerEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="@dimen/contentPaddingS"
                android:layout_marginTop="@dimen/contentPaddingS"
                android:hint="@string/create_hint_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_album_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/PlaylistMakerEditTextInputAppearance"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/contentPaddingS"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@drawable/selector_create_btn_tint"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create_btn_create"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:textFontWeight="500"
        android:textSize="@dimen/text_L"
        app:cornerRadius="@dimen/cornerRadiusS" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>