<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_light_gray"
    tools:context=".playlistDetail.presentation.ui.PlaylistDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/contentPaddingM"
        android:layout_marginBottom="@dimen/bottom_sheet_tracks_peek_height">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/AppBar"
                    android:background="@color/yp_light_gray"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:navigationIconTint="@color/yp_black" />
            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_track_placeholder" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_name"
                style="@style/PlaylistMakerTextBoldM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/contentPaddingS"
                android:layout_marginTop="@dimen/contentPaddingM"
                android:textColor="@color/yp_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_cover"
                tools:text="Best songs 2021" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_description"
                style="@style/PlaylistMakerTextAppearanceS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/contentPaddingS"
                android:layout_marginTop="@dimen/contentPaddingXS"
                android:textColor="@color/yp_black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_name"
                tools:text="2022" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_detail_info"
                style="@style/PlaylistMakerTextAppearanceS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/contentPaddingS"
                android:layout_marginTop="@dimen/contentPaddingXS"
                android:textColor="@color/yp_black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_description"
                tools:text="300 минут · 98 треков" />

            <ImageView
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/contentPaddingS"
                android:layout_marginTop="@dimen/contentPaddingS"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/playlist_detail_btn_share_description"
                android:src="@drawable/ic_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_detail_info"
                app:tint="@color/yp_black" />

            <ImageView
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/contentPaddingS"
                android:layout_marginTop="@dimen/contentPaddingS"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/playlist_detail_btn_more_description"
                android:src="@drawable/ic_more"
                app:layout_constraintStart_toEndOf="@id/btn_share"
                app:layout_constraintTop_toBottomOf="@id/lbl_detail_info"
                app:tint="@color/yp_black" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bottom_sheet"
        android:orientation="vertical"
        app:behavior_peekHeight="@dimen/bottom_sheet_tracks_peek_height"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_bottom_sheet_drag_element" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_track_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:listitem="@layout/item_track" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/layout_more_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bottom_sheet"
        app:behavior_peekHeight="384dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_bottom_sheet_drag_element" />

            <include
                android:id="@+id/playlist_linear_item"
                layout="@layout/item_linear_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_more_share_playlist"
                style="@style/PlaylistMakerTextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contentPaddingXS"
                android:text="@string/playlist_detail_btn_share" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_more_edit"
                style="@style/PlaylistMakerTextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist_detail_btn_edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_more_delete_playlist"
                style="@style/PlaylistMakerTextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlist_detail_btn_delete" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>